[package]
name = "klee-example"
version = "0.1.0"
authors = ["BajacDev <baptiste.jacquemot@orange.fr>"]
edition = "2018"

[dependencies.cstr_core]
version = "0.2.2"
default-features = false

[profile.dev]
panic = "abort"
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization

[profile.release]
panic = "abort"
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization
debug = true        # better debugging